--- a/src/app/contacts/contacts-detail/contacts-detail.component.html
+++ b/src/app/contacts/contacts-detail/contacts-detail.component.html
@@ -1,22 +1,30 @@
-
 <div class="panel panel-default">
   <div class="panel-heading clearfix">
         <div class="row">
+          <p class="contact_name">
+            {{contact?.name}}
+          </p>
+          <div class="row">
+            <div class="pull-left">
+              <img src="{{contact?.imageUrl}}"
+                   alt="{{contact?.name}}"
+                   class="img-responsive"
+                   style="max-height: 100px;
+                   padding-left: 12px"/>
+            </div>
+            <div class="pull-right">
+              <button class="btn btn-primary button_edit">Edit</button>
+              <button class="btn btn-danger" button_delete>Delete</button>
+            </div>
+          </div>
           </div>
 
-        <div class="row">
-          <div class="pull-right">
-            <button class="btn btn-primary" type="submit">Edit</button>
-            <button class="btn btn-danger" type="button">Delete</button>
-          </div>
-          </div>
   </div>
   <div class="panel-body">
-    <p class="paragraph1">Email:{{contacts?.email}}</p>
-    <p class="paragraph1">Phone:{{contacts?.phone}}</p>
+    <p class="paragraph1">Email:{{contact?.email}}</p>
+    <p class="paragraph1">Phone:{{contact?.phone}}</p>
   </div>
   </div>
-
 <!--
 <div class="row">
   <h1>Recipe Name</h1>
