--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="col-md-5">
-    <app-contact-list></app-contact-list>
+    <app-contact-list (contactSend)="selectedContact = $event"></app-contact-list>
   </div>
   <div class="col-md-4">
-    <app-contacts-detail></app-contacts-detail>
+    <app-contacts-detail *ngIf="selectedContact !=null"
+    [contact]="selectedContact"
+    ></app-contacts-detail>
   </div>
 </div>
