--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,22 +1,38 @@
 <div class="panel panel-default">
   <div class="panel-heading clearfix">
-  <div class="col-xs-12">
-    <span class="pull-left title">Contacts</span>
-    <button class="btn btn-success pull-right">New Contact</button>
-  </div>
-  </div>
-<div class="row">
-  <div class="col-xs-12">
-    <div class="panel panel-body">
-      <app-contact-item
-        *ngFor="let contact of contacts"
-        [contact]="contact"
-        (click)="onSelected(contact)">
+    <h4 class="panel-title pull-left">Contacts</h4>
+    <ul style="background-color: #F4F6F6;" class="panel pull-right">
+      <button type="button" class="btn btn-success">New Contact
+      </button>
 
-      </app-contact-item>
-    </div>
-    </div>
+    </ul>
+  </div>
+  <div class="panel-body">
+    <app-contact-item
+      *ngFor="let contact of contacts"
+      [contact]="contact"
+      (click)="onSelected(contact)"></app-contact-item>
   </div>
 </div>
+  <!--
+  <div class="panel panel-default">
+    <div class="panel-heading clearfix">
+    <div class="col-xs-12">
+      <span class="pull-left title">Contacts</span>
+      <button class="btn btn-success pull-right">New Contact</button>
+    </div>
+    </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="panel panel-body">
+        <app-contact-item
+          *ngFor="let contact of contacts"
+          [contact]="contact"
+          (click)="onSelected(contact)">
 
-
+        </app-contact-item>
+      </div>
+      </div>
+    </div>
+  </div>
+  -->
