--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,10 +1,11 @@
 <div class="row">
-  <div class="col-md-5">
-    <app-contact-list (contactSend)="selectedContact = $event"></app-contact-list>
-  </div>
-  <div class="col-md-4">
-    <app-contacts-detail *ngIf="selectedContact !=null"
+<div class="col-md-5">
+  <app-contact-list (selectedContactEvent)="selectedContact = $event"></app-contact-list>
+</div>
+<div class="col-md-6">
+  <app-contact-detail
+    *ngIf = "selectedContact != null"
     [contact]="selectedContact"
-    ></app-contacts-detail>
-  </div>
+  ></app-contact-detail>
+</div>
 </div>
