--- a/src/app/contacts/contacts-detail/contacts-detail.component.html
+++ b/src/app/contacts/contacts-detail/contacts-detail.component.html
@@ -6,13 +6,13 @@
     <img src="{{contact?.imageUrl}}"
          alt="{{contact?.name}}"
          class="image-responsive"
-         style="max-height: 1">
+         style="max-height: 1px">
 
     <div class="panel pull-right">
-      <a routerLink="edit" type="button" class="btn btn-primary">Edit
-      </a>
-      <a (click)="onDelete()" type="button" class="btn btn-danger">Delete
-      </a>
+      <button type="button" class="btn btn-primary">Edit
+      </button>
+      <button type="button" class="btn btn-danger">Delete
+      </button>
     </div>
   </div>
   <div class="panel-body">
