--- a/src/app/messages/message-item/message-item.component.html
+++ b/src/app/messages/message-item/message-item.component.html
@@ -1,6 +1,8 @@
 <a class="list-group-item clearfix">
-  <div class=''>
+  <div>
+  <div class='row'>
     <span class="messageHeader">{{message?.sender}}</span>
+  </div>
     <div class="messageText">{{message?.msgText}}</div>
   </div>
 </a>
