--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
-<app-header (selectedFeatureEvent)="selectedMenu = $event"></app-header>
-<div class="container pull-left" [ngSwitch]="selectedMenu">
-  <div class="row">
-    <div class="col-md-12">
-      <app-documents *ngSwitchCase="'documents'"></app-documents>
-      <app-messages *ngSwitchCase="'messages'"></app-messages>
-      <app-contacts *ngSwitchCase="'contacts'"></app-contacts>
-    </div>
-  </div>
+<app-header></app-header>
+<div class="container pull-left">
+  <router-outlet></router-outlet>
 </div>
