--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,11 +1,8 @@
 <div class="row">
   <div class="col-md-5">
-    <app-document-list
-      (selectedDocumentEvent)="selectedDocument = $event"></app-document-list>
+    <app-document-list></app-document-list>
   </div>
   <div class="col-md-7">
-    <app-document-detail
-      [document]="selectedDocument"
-      *ngIf="selectedDocument; else infoDoc"></app-document-detail>
+<router-outlet></router-outlet>
   </div>
 </div>
