--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -2,14 +2,14 @@
   <div class="panel-heading clearfix">
     <h4 class="panel-title pull-left">Contacts</h4>
     <ul style="background-color: #F4F6F6;" class="panel pull-right">
-      <button type="button" routerLink="new" class="btn btn-success">New Contact
+      <button routerLink="new" type="button" class="btn btn-success">New Contact
       </button>
 
     </ul>
   </div>
   <div class="panel-body">
-    <router-outlet></router-outlet>
+    <app-contact-item
+      *ngFor="let contact of contacts"
+      [contact]="contact"></app-contact-item>
   </div>
-
 </div>
-
