--- a/src/app/contacts/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-item/contact-item.component.html
@@ -1,17 +1,12 @@
-<a class="list-group-item clearfix"
- routerLink="{{contact?.id}}"
-routerLinkActive="active">
 <div
-  class="pull-left">
-  <h4 class="list-group-item-heading">{{ contact?.name }}</h4>
-</div>
-  <span class="pull-right">
+  class="row pt-3 pb-3 m-3 border rounded list-group-item clearfix">
+  <div class="col">
+    <h3>{{ contact?.name }}</h3>
     <img
-      class="img-responsive"
+      *ngIf="contact?.imageUrl != ''"
+      class="contact-image img-responsive float-right"
       src="{{ contact?.imageUrl }}"
-      alt="{{ contact?.name }}"
-      style="max-height: 50px;">
+      alt="{{ contact?.name }}'s picture">
 
-  </span>
-
-</a>
+  </div>
+</div>
