--- a/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,3 +1,114 @@
-<p>
-  contact-edit works!
-</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <form id="contact-edit" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="name">Name</label>
+          <input
+            type="text"
+            id="name"
+            class="form-control required"
+            size="120"
+            name="name"
+            ngModel="{{contact?.name}}"
+            #name="ngModel"
+            required
+            max="120">
+        </div>
+
+        <div class="col-sm-12 form-group">
+          <label for="email" required>Email</label>
+          <input
+            type="text"
+            id="email"
+            name="email"
+            class="form-control required"
+            ngModel="{{contact?.email}}"
+            #email="ngModel"
+            required
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+            size="120"
+            max="255">
+        </div>
+        <div class="row" *ngIf="!email.valid && email.dirty">
+          <div class="col">
+            <p class="alert alert-danger">Invalid email address, try again.</p>
+          </div>
+
+
+        </div>
+        <div class="col-sm-12 form-group">
+          <label for="phone">Phone</label>
+          <input
+            type="text"
+            id="phone"
+            size="150"
+            name="phone" ngModel="{{contact?.phone}}"
+            #phone="ngModel"
+            required
+            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*"
+            class="form-control invalid"
+            max="255">
+
+        </div>
+        <div class="row" *ngIf="!phone.valid && phone.touched">
+          <div class="col">
+            <p class="alert alert-danger">Invalid phone number, try again.</p>
+          </div>
+        </div>
+
+
+        <div class="col-sm-12 form-group">
+          <label for="imageUrl">Image URL</label>
+          <input
+            type="text"
+            id="imageUrl"
+            name="url"
+            ngModel="{{contact?.imageUrl}}"
+            #url="ngModel"
+            class="form-control"
+            size="150"
+            max="255">
+        </div>
+      </div>
+
+
+      <div class="row" *ngIf="!f.contact?.name.valid && !f.contact?.email.valid">
+        <div class="col">
+          <p *ngIf="!f.valid" class="alert alert-danger">Name and Email are required fields</p>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="groupList">Group contacts</label>
+
+        <div ><p class="alert alert-danger">User already in group</p></div>
+
+        <div class="row" id="groupList"
+             style="min-height: 3rem;">
+          <div *ngFor="let contact of groupContacts; let i = index">
+            <div>
+              <app-contact-item class="col-sm-11" [contact]="contact"></app-contact-item>
+              <button class="btn btn-danger col-sm-2 deleteButton" (click)="onRemoveItem(i)">X</button>
+            </div>
+          </div>
+          <span class="dragMsg" *ngIf="groupContacts?.length < 1">Drag contacts in group here</span>
+        </div>
+
+      </div>
+
+
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit"
+                  [disabled]="!f.valid">Save
+          </button>
+          <button class="btn btn-primary" type="button"
+                  (click)="onCancel()">Cancel
+          </button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
