--- a/src/app/documents/document-edit/document-edit.component.html
+++ b/src/app/documents/document-edit/document-edit.component.html
@@ -1,3 +1,64 @@
-<p>
-  document-edit works!
-</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+
+    <form id="document-edit" #f="ngForm" (ngSubmit)=" onSubmit(f)">
+
+      <div class="col-sm-12 form-group">
+        <label for="name">Document title</label>
+        <input
+          name="title"
+          ngModel="{{document?.name}}"
+          #title="ngModel"
+          type="text"
+          id="name"
+          class="form-control"
+          size="120"
+          max="120"
+          required>
+      </div>
+
+      <div class="col-sm-12 form-group">
+        <label for="description">Document description</label>
+        <input
+          name="description"
+          ngModel="{{document?.description}}"
+          #description="ngModel"
+          type="text"
+          id="description"
+          class="form-control"
+          size="120"
+          max="255">
+      </div>
+
+      <div class="col-sm-12 form-group">
+        <label for="documentUrl">Document URL</label>
+        <input
+          name="documentUrl"
+          ngModel="{{document?.url}}"
+          #documentUrl="ngModel"
+          type="text"
+          id="documentUrl"
+          class="form-control"
+          size="150"
+          max="255"
+          required>
+      </div>
+
+      <div *ngIf="!f.valid"><p class="alert alert-danger">Document title and URL are required fields</p></div>
+
+      <!--<div class="row" id="groupList" style="min-height: 3rem;"-->
+      <!--dnd-droppable [dropZones]="['contactGroup']" (onDropSuccess)="addToGroup($event)">-->
+      <!--<contactItem *ngFor="let contact of groupContacts; let i = index"></contactItem>-->
+
+
+      <div class="row">
+        <div class="col-xs-12">
+          <button [disabled]="!f.valid" class="btn btn-success" type="submit" >Save</button>
+          <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
+        </div>
+      </div>
+
+    </form>
+
+  </div>
+</div>
