--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -2,16 +2,16 @@
   <div class="panel-heading clearfix">
     <h4 class="panel-title pull-left">Contacts</h4>
     <ul style="background-color: #F4F6F6;" class="panel pull-right">
-      <button routerLink="new" type="button" class="btn btn-success">New Contact
-      </button>
-
+      <a routerLink="/contacts/new" type="button" class="btn btn-success">Add Contact
+      </a>
     </ul>
   </div>
+
   <div class="panel-body">
     <app-contact-item
       *ngFor="let contact of contacts"
-      [contact]="contact"
-      [routerLink]="contact?.id" routerLinkActive="active">
+      [contact]="contact" (click) = "onSelected(contact)"
+      dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']">
     </app-contact-item>
   </div>
 </div>
