--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,17 +1,27 @@
 <div class="panel panel-default">
-  <div class="panel-heading clearfix">
-    <h4 class="panel-title pull-left">Contacts</h4>
-    <ul style="background-color: #F4F6F6;" class="panel pull-right">
-      <a routerLink="/contacts/new" type="button" class="btn btn-success">Add Contact
-      </a>
-    </ul>
-  </div>
 
+  <div class="panel-heading">
+    <div class="row">
+      <span class="title pad-left-right">Contacts</span>
+    </div>
+    <div class="row">
+      <div class="input-group pull-left pad-left-right col-xs-7">
+
+        <!-- Add the search box input field here -->
+        <input type="text" name="searchBox" #searchBox class="form-control"
+               (keypress)="onKeyPress(searchBox.value)" placeholder="Enter search value">
+        <div class="glyphicon glyphicon glyphicon-search input-group-addon" (click)="search(searchBox.value)"></div>
+      </div>
+      <div class="pull-right pad-left-right">
+        <a class="btn btn-success" [routerLink]="['new']">New Contact</a>
+      </div>
+    </div>
+
+  </div>
   <div class="panel-body">
     <app-contact-item
-      *ngFor="let contact of contacts"
-      [contact]="contact" (click) = "onSelected(contact)"
-      dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']">
-    </app-contact-item>
+      *ngFor="let contact of contacts | contactsFilter:term"
+      [contact]="contact" dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']"></app-contact-item>
+
   </div>
 </div>
